--- a/app/src/main/res/layout/fragment_shopping.xml
+++ b/app/src/main/res/layout/fragment_shopping.xml
@@ -34,15 +34,10 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/fabAddShoppingItem"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_margin="16dp"-->
-<!--        app:srcCompat="@drawable/ic_add"-->
-<!--        app:backgroundTint="@color/colorAccent"-->
-<!--        app:fabSize="normal"-->
-<!--        app:layout_anchorGravity="bottom|right|end"-->
-<!--        app:layout_anchor="@id/clShoppingItems" />-->
+    <Button
+        android:id="@+id/fabAddShoppingItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
